[gd_scene load_steps=16 format=2]

[ext_resource path="res://Assets/2D/NovaMono.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scripts/MainMenu/MainMenu.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Garage/Garage.tscn" type="PackedScene" id=4]
[ext_resource path="res://Assets/2D/rural_asphalt_road_4k.hdr" type="Texture" id=5]
[ext_resource path="res://Scripts/MainMenu/Vehicles.gd" type="Script" id=6]
[ext_resource path="res://Scripts/MainMenu/InterpolatedCamera.gd" type="Script" id=8]
[ext_resource path="res://Assets/2D/RotationArrow.svg" type="Texture" id=9]
[ext_resource path="res://Scripts/MainMenu/Worlds.gd" type="Script" id=10]

[sub_resource type="DynamicFont" id=2]
size = 24
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=8]
size = 20
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 1 )

[sub_resource type="InputEventKey" id=3]
scancode = 16777221

[sub_resource type="ShortCut" id=4]
shortcut = SubResource( 3 )

[sub_resource type="PanoramaSky" id=6]
panorama = ExtResource( 5 )

[sub_resource type="Environment" id=7]
background_mode = 2
background_sky = SubResource( 6 )
ambient_light_energy = 0.5
fog_depth_curve = 1.03526e-05
tonemap_mode = 3
glow_enabled = true

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="Container" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 16
custom_constants/margin_top = 16
custom_constants/margin_left = 16
custom_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="Container"]
margin_left = 16.0
margin_top = 16.0
margin_right = 1136.0
margin_bottom = 632.0

[node name="WelcomeLabel" type="Label" parent="Container/VBoxContainer"]
margin_right = 1120.0
margin_bottom = 34.0
custom_fonts/font = SubResource( 2 )
text = "WELCOME_KEY"
align = 1

[node name="ChooseCar" type="Control" parent="Container/VBoxContainer"]
margin_top = 38.0
margin_right = 1120.0
margin_bottom = 567.0
size_flags_vertical = 3

[node name="Label" type="Label" parent="Container/VBoxContainer/ChooseCar"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 20.0
grow_vertical = 0
rect_pivot_offset = Vector2( 1430, -114 )
custom_fonts/font = SubResource( 8 )
align = 1

[node name="LeftButton" type="Button" parent="Container/VBoxContainer/ChooseCar"]
anchor_top = 0.5
anchor_bottom = 0.5
grow_vertical = 2
rect_min_size = Vector2( 58, 58 )
icon = ExtResource( 9 )
expand_icon = true

[node name="RightButton" type="Button" parent="Container/VBoxContainer/ChooseCar"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
grow_vertical = 2
rect_min_size = Vector2( 58, 58 )
rect_scale = Vector2( -1, 1 )
icon = ExtResource( 9 )
expand_icon = true

[node name="PanelContainer" type="PanelContainer" parent="Container/VBoxContainer"]
margin_top = 571.0
margin_right = 573.0
margin_bottom = 612.0
size_flags_horizontal = 0

[node name="Options" type="HBoxContainer" parent="Container/VBoxContainer/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 566.0
margin_bottom = 34.0

[node name="NameLabel" type="Label" parent="Container/VBoxContainer/PanelContainer/Options"]
margin_top = 5.0
margin_right = 56.0
margin_bottom = 22.0
text = "NAME_KEY"

[node name="NameLineEdit" type="LineEdit" parent="Container/VBoxContainer/PanelContainer/Options"]
margin_left = 60.0
margin_right = 260.0
margin_bottom = 27.0
rect_min_size = Vector2( 200, 0 )
size_flags_vertical = 4
placeholder_text = "ENTER_NAME_KEY"

[node name="ServerIPLabel" type="Label" parent="Container/VBoxContainer/PanelContainer/Options"]
margin_left = 264.0
margin_top = 5.0
margin_right = 355.0
margin_bottom = 22.0
text = "SERVER_IP_KEY"

[node name="ServerIPLineEdit" type="LineEdit" parent="Container/VBoxContainer/PanelContainer/Options"]
margin_left = 359.0
margin_right = 559.0
margin_bottom = 27.0
rect_min_size = Vector2( 200, 0 )
size_flags_vertical = 4
placeholder_text = "ENTER_SERVER_IP_KEY"

[node name="WorldScroller" type="ScrollContainer" parent="Container/VBoxContainer"]
margin_top = 616.0
margin_right = 1120.0
margin_bottom = 616.0
rect_min_size = Vector2( 200, 0 )
follow_focus = true
scroll_vertical_enabled = false

[node name="Worlds" type="HBoxContainer" parent="Container/VBoxContainer/WorldScroller"]
script = ExtResource( 10 )

[node name="Actions" type="HBoxContainer" parent="Container"]
margin_left = 847.0
margin_top = 532.0
margin_right = 1136.0
margin_bottom = 632.0
size_flags_horizontal = 8
size_flags_vertical = 8

[node name="OptionsButton" type="Button" parent="Container/Actions"]
margin_top = 75.0
margin_right = 85.0
margin_bottom = 100.0
size_flags_vertical = 8
text = "OPTIONS_KEY"

[node name="PlayButton" type="MenuButton" parent="Container/Actions"]
margin_left = 89.0
margin_right = 289.0
margin_bottom = 100.0
rect_min_size = Vector2( 200, 100 )
custom_fonts/font = SubResource( 1 )
shortcut = SubResource( 4 )
text = "PLAY_KEY"
flat = false
items = [ "SINGLEPLAYER_KEY", null, 0, false, false, -1, 0, null, "", true, "START_SINGLE_PLAYER_GAME_KEY", null, 0, false, false, 0, 0, null, "", false, "P2P_MULTIPLAYER_KEY", null, 0, false, false, -1, 0, null, "", true, "HOST_MULTIPLAYER_GAME_KEY", null, 0, false, false, 1, 0, null, "", false, "JOIN_MULTIPLAYER_GAME_KEY", null, 0, false, false, 2, 0, null, "", false ]

[node name="System" type="HBoxContainer" parent="Container"]
margin_left = 1075.0
margin_top = 16.0
margin_right = 1136.0
margin_bottom = 44.0
size_flags_horizontal = 8
size_flags_vertical = 0

[node name="InfoButton" type="MenuButton" parent="Container/System"]
margin_right = 29.0
margin_bottom = 28.0
rect_min_size = Vector2( 28, 0 )
text = "..."
flat = false
items = [ "ABOUT_KEY", null, 0, false, true, 0, 0, null, "", false, "License Information", null, 0, false, false, 1, 0, null, "", false ]

[node name="QuitButton" type="Button" parent="Container/System"]
margin_left = 33.0
margin_right = 61.0
margin_bottom = 28.0
rect_min_size = Vector2( 28, 28 )
hint_tooltip = "EXIT_GAME_KEY"
text = "X"

[node name="OptionsDialog" type="ConfirmationDialog" parent="."]
margin_right = 263.0
margin_bottom = 143.0
rect_min_size = Vector2( 140, 49 )
window_title = "PLAY_KEY"

[node name="GridContainer" type="GridContainer" parent="OptionsDialog"]
margin_left = 8.0
margin_top = 8.0
margin_right = 255.0
margin_bottom = 102.0
columns = 2

[node name="PortLabel" type="Label" parent="OptionsDialog/GridContainer"]
margin_top = 5.0
margin_right = 133.0
margin_bottom = 22.0
text = "PORT_KEY"

[node name="PortSpinBox" type="SpinBox" parent="OptionsDialog/GridContainer"]
margin_left = 137.0
margin_right = 247.0
margin_bottom = 27.0
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 65355.0
value = 31400.0

[node name="MaxPlayersLabel" type="Label" parent="OptionsDialog/GridContainer"]
margin_top = 36.0
margin_right = 133.0
margin_bottom = 53.0
text = "MAX_PLAYERS_KEY"

[node name="MaxPlayersSpinBox" type="SpinBox" parent="OptionsDialog/GridContainer"]
margin_left = 137.0
margin_top = 31.0
margin_right = 247.0
margin_bottom = 58.0
size_flags_horizontal = 3
min_value = 1.0
max_value = 1000.0
value = 100.0

[node name="DayNightCycleLabel" type="Label" parent="OptionsDialog/GridContainer"]
margin_top = 69.0
margin_right = 133.0
margin_bottom = 86.0
text = "DAY_NIGHT_CYCLE_KEY"

[node name="DayNightCycleCheckButton" type="CheckButton" parent="OptionsDialog/GridContainer"]
margin_left = 137.0
margin_top = 62.0
margin_right = 201.0
margin_bottom = 94.0
size_flags_horizontal = 0

[node name="AboutDialog" type="AcceptDialog" parent="."]
window_title = "ABOUT_KEY"

[node name="RichTextLabel" type="RichTextLabel" parent="AboutDialog"]
margin_left = 8.0
margin_top = 8.0
margin_right = 103.0
margin_bottom = 44.0
focus_mode = 2
bbcode_enabled = true
bbcode_text = "ABOUT_TEXT_KEY"
text = "ABOUT_TEXT_KEY"
fit_content_height = true
scroll_active = false
selection_enabled = true

[node name="LicenseInformationDialog" type="AcceptDialog" parent="."]
window_title = "License Information"
dialog_text = "Vehicle is a car driving computer game, that is createt with Godot Engine.
Copyright (C) 2022-present Janosch Lion

This program is free software: you can redistribute it and/or modify
it under the terms of the GNU General Public License as published by
the Free Software Foundation, either version 3 of the License, or
(at your option) any later version.

This program is distributed in the hope that it will be useful,
but WITHOUT ANY WARRANTY; without even the implied warranty of
MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
GNU General Public License for more details.

You should have received a copy of the GNU General Public License
along with this program. If not, see <https://www.gnu.org/licenses/>."

[node name="Environment" type="WorldEnvironment" parent="."]
environment = SubResource( 7 )

[node name="Garage" parent="Environment" instance=ExtResource( 4 )]
transform = Transform( -1.09278e-08, 0, -0.25, 0, 0.25, 0, 0.25, 0, -1.09278e-08, 0, 1.87, 0 )
__meta__ = {
"_edit_lock_": true
}

[node name="Camera" type="Camera" parent="Environment"]
transform = Transform( 1, 0, 0, 0, 0.965926, 0.258819, 0, -0.258819, 0.965926, 0, 3, 16 )
current = true
script = ExtResource( 8 )
offset = Vector3( 3, 2, 6 )

[node name="Vehicles" type="Spatial" parent="."]
script = ExtResource( 6 )
spots = [ {
"orientation": 90.0,
"position": Vector3( -6, 0, 13 )
}, {
"orientation": 90.0,
"position": Vector3( -6, 0, 8 )
}, {
"orientation": 90.0,
"position": Vector3( -6, 0, 3 )
}, {
"orientation": 90.0,
"position": Vector3( -6, 0, -2 )
}, {
"orientation": 90.0,
"position": Vector3( -6, 0, -7 )
}, {
"orientation": 90.0,
"position": Vector3( -6, 0, -12 )
}, {
"orientation": -90.0,
"position": Vector3( 6, 0, -7 )
}, {
"orientation": -90.0,
"position": Vector3( 6, 0, -2 )
}, {
"orientation": -90.0,
"position": Vector3( 6, 0, 3 )
}, {
"orientation": -90.0,
"position": Vector3( 6, 0, 8 )
}, {
"orientation": -90.0,
"position": Vector3( 6, 0, 13 )
} ]

[connection signal="pressed" from="Container/VBoxContainer/ChooseCar/LeftButton" to="Vehicles" method="previous"]
[connection signal="pressed" from="Container/VBoxContainer/ChooseCar/RightButton" to="Vehicles" method="next"]
[connection signal="pressed" from="Container/Actions/OptionsButton" to="OptionsDialog" method="popup_centered"]
[connection signal="pressed" from="Container/System/QuitButton" to="." method="_on_quit_button_pressed"]
